# cog-canvas

./: .env.example  .gitignore  COGCANVAS_VS_LIGHTRAG.md  EXPERIMENTS.md  EXPERIMENT_FINDINGS.md  INSPECTION_REPORT.md  LICENSE  PHASE3_ARCHITECTURE.md  PHASE3_CHANGES.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_FLOW_DIAGRAM.txt  PHASE4_IMPLEMENTATION.md  PHASE4_QUICKREF.txt  PHASE4_SUMMARY.md  README.md  README_CN.md  TEMPORAL_MODULE_SUMMARY.md  TODO_MULTIROUND.md  diagnose_slowness.py  example_temporal_retrieval.py  patch_canvas.py  phase4_example_flow.py  pyproject.toml  quick_test.py  run_ablation_test.sh  test_bm25_retrieval.py  test_cli_config.py  test_enhanced_cogcanvas.py  test_reranker_speed.py  test_temporal_retrieval.py  track_progress.py
cogcanvas/: __init__.py  canvas.py  embeddings.py  filtering.py  graph.py  models.py  reranker.py  resolver.py  scoring.py  temporal.py  vage.py  vage_learned.py
docs/: CANVAS_MODIFICATIONS.md  EMBEDDINGS_IMPLEMENTATION.md  GRAPH_RELATIONSHIPS.md  IMPLEMENTATION_SUMMARY.md  LLM_BACKENDS.md  P2.5_CONFIDENCE_SCORING.md  QUICKSTART_BACKENDS.md
examples/: basic_usage.py  confidence_scoring_demo.py  graph_relationships.py  llm_backends_demo.py  semantic_retrieval_demo.py  simple_backend_usage.py
experiments/: LOCOMO_COMPLETE.md  LOCOMO_GUIDE.md  LOCOMO_IMPLEMENTATION_SUMMARY.md  LOCOMO_QUICKSTART.md  LOCOMO_README.md  LOCOMO_SUMMARY.md  README.md  __init__.py  analyze_case_study.py  analyze_multihop_failures.py  data_gen.py  data_gen_hard.py  data_gen_long.py  data_gen_multihop.py  debug_retrieval_failure.py  debug_run.py  debug_v3_multihop.py  durecdial_adapter.py  eval_retrieval_recall.py  extraction_cache.py  finetune_vulnerability_embedding.py  github_issue_case_study.py  llm_utils.py  locomo_adapter.py  locomo_diagnose.py  locomo_quick_test.py  locomo_test_answer.py  locomo_test_extraction.py  prepare_vage_training_data.py  qa_comparison.py  rebuild_cache.py  rebuild_durecdial_cache.py  run_cluster_validation.py  run_rag_baseline.py  run_schema_discovery.py  run_threshold_sensitivity.py  run_vage_ablation.py  runner.py  (+8 more)
(+90 files in other folders)
