[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogcanvas"
version = "0.1.0"
description = "Compression-resistant cognitive objects for long LLM conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CogCanvas Authors" }
]
keywords = [
    "llm",
    "memory",
    "context",
    "cognitive",
    "ai",
    "nlp",
    "conversation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
embeddings = ["sentence-transformers>=2.2.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/username/cogcanvas"
Documentation = "https://github.com/username/cogcanvas#readme"
Repository = "https://github.com/username/cogcanvas"
Issues = "https://github.com/username/cogcanvas/issues"

[tool.hatch.build.targets.wheel]
packages = ["cogcanvas"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
